--- a/app/views/line_items/_form.html.erb
+++ b/app/views/line_items/_form.html.erb
@@ -27,9 +27,8 @@
     <%= f.hidden_field :card_id, :value => @card.id %>
     <%= f.input :recipient_id %>
     <%= f.input :message %>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <%= f.button :submit, 'Buy card!' %>
+    <%= link_to 'Back', line_items_path, class: "btn btn-success" %>
 <% end %>
 
 
